--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Hiduppuisi",
   "short_name": "Hiduppuisi",
-  "start_url": "https://www.hiduppuisi.com/",
+  "start_url": "https://pdf.hiduppuisi.com/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#1a73e8",
