--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Hiduppuisi",
-  "short_name": "Hiduppuisi",
+  "name": "Hiduppuisi Pdf",
+  "short_name": "Hiduppuisi Pdf",
   "start_url": "https://pdf.hiduppuisi.com/",
   "display": "standalone",
   "background_color": "#ffffff",
