--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
- "name": "inpuTekno",
+ "name": "inpuTekno | Tutor will guide you to learn! ",
  "short_name": "inpuTekno",
  "description": "Tips, Games, Gadget, Media Sosial",
  "lang": "id",
