--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
- "name": "inpuTekno.Com",
- "short_name": "inpuTekno | Tutor will guide you to learn!",
+ "name": "inpuTekno | Tutor will guide you to learn!",
+ "short_name": "inpuTekno",
  "description": "Tips, Games, Gadget, Media Sosial",
  "lang": "id",
  "dir": "ltr",
